# TTman

./: .gitignore  CMakeLists.txt  README.md
data/: activity_2059173551.tcx  circuit.txt  example.gpx
include/: Circuit.h  GPSPoint.h  GPXFile.h  Ride.h  TCXFile.h
src/: Circuit.cpp  GPSPoint.cpp  GPXFile.cpp  Ride.cpp  TCXFile.cpp  main.cpp
